[gd_scene load_steps=2 format=3 uid="uid://pafu0lxpcl8w"]

[ext_resource type="Script" path="res://rooms/main_menu/pages/main_screen.gd" id="1_qqh0d"]

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qqh0d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
